<resources>
    <string name="app_name">FirstClass</string>
    <string name="title_activity_referencia">referenciaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="email">correo</string>
    <string name="crear_cuenta">Unete</string>
    <string name="usuario">usuario</string>
    <string name="confirmar_pass">Conformar Contraseña</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="card_name">Edward</string>
    <string name="first_word">Hace </string>
    <string name="second_word">4 días</string>
    <string name="like_number_card">10 Me gusta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>