<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/Card"
    android:layout_width="match_parent"
    android:layout_height="@dimen/high_card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/corner_card"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp">

        <ImageView
            android:id="@+id/picture_card_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_card"
            android:background="@drawable/image"
            android:scaleType="centerCrop"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingHorizontal="4dp">

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_user_name_card"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/first_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_word"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/first_word"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:id="@+id/second_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_word"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/second_word"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_like"/>

                <TextView
                    android:layout_marginHorizontal="5dp"
                    android:id="@+id/like_number_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like_number_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/second_word"/>


            </LinearLayout>

        </LinearLayout>

    </FrameLayout>



</androidx.cardview.widget.CardView>